@@ -3,6 +3,7 @@
 
 * Display de notificaciones y mensajes pendientes y total
 * Implementanda respuesta a notificaciones y mensajes en local
+* Navegabilidad entre vistas de mensajes y notificaciones
 
 2010-12-05 
 ----------
